--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firewal_ui_react",
+  "name": "ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,44 +10,43 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.13",
-    "@tanstack/react-query": "^5.89.0",
-    "@tanstack/react-table": "^8.21.3",
-    "axios": "^1.11.0",
-    "chart.js": "^4.5.0",
+    "@tanstack/react-query": "^5.90.2",
+    "axios": "^1.12.2",
+    "axon": "^2.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.543.0",
+    "lucide-react": "^0.544.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
-    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2",
-    "recharts": "^2.15.4",
+    "react-hook-form": "^7.65.0",
+    "react-router-dom": "^7.9.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
-    "zod": "^4.1.7"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@types/node": "^24.3.1",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
-    "cypress": "^15.2.0",
-    "eslint": "^9.33.0",
+    "@eslint/js": "^9.36.0",
+    "@tanstack/eslint-plugin-query": "^5.90.1",
+    "@types/node": "^24.5.2",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.3",
+    "eslint": "^9.36.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "tw-animate-css": "^1.3.8",
+    "globals": "^16.4.0",
+    "jiti": "^2.6.1",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "typescript-eslint": "^8.45.0",
+    "vite": "^7.1.7"
   }
 }
